# isaac-sim-ros2-experimentation

./: .gitignore  CLAUDE.md  README.md
docker/lerobot_inference/: Dockerfile  README.md  entrypoint.sh  motd-vast-info.sh
docker/lerobot_train/: Dockerfile  README.md  entrypoint.sh
scripts/: train_with_feature_dropout.py
src/isaac_sim_SO_101_teleop/: README.md  package.xml  setup.cfg  setup.py
src/isaac_sim_SO_101_teleop/isaac_sim_SO_101_teleop/: object_randomizer.py  sim_launcher.py  so_101_pub.py
src/isaac_sim_SO_101_teleop/launch/: joy_pub.launch.py
src/isaac_sim_SO_101_teleop/scenes/: so101_base.usda
src/pre_trained_vla_test/: README.md  package.xml  setup.cfg  setup.py
src/pre_trained_vla_test/pre_trained_vla_test/: act_inference.py  merge_lora.py  pi0_inference.py  pi0_inference_broker.py  pi0_inference_server.py  pi0_throughput_bench.py  probe_marginal.py  quantize_pi0.py
src/pre_trained_vla_test_interfaces/: CMakeLists.txt  package.xml
src/pre_trained_vla_test_interfaces/srv/: GetActionChunk.srv
src/record_dataset_so_101/: README.md  package.xml  setup.cfg  setup.py
src/record_dataset_so_101/record_dataset_so_101/: dataset_recorder_node.py  visualize_all_episodes.py
src/vla_arm_control/: CMakeLists.txt  README.md  package.xml
src/vla_arm_control/config/: openvla_oft.yaml  pi0.yaml  smoother.yaml
src/vla_arm_control/include/vla_arm_control/: openvla_oft_node.hpp  pi0_node.hpp  smoother_node.hpp  vla_base_node.hpp
src/vla_arm_control/launch/: openvla_oft.launch.py  pi0.launch.py
src/vla_arm_control/src/: openvla_oft_node.cpp  pi0_node.cpp  smoother_node.cpp
