<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pre_trained_vla_test_interfaces</name>
  <version>0.1.0</version>
  <description>Service interfaces for the pi0/pi05 inference server (Isaac Sim requests action chunks, providing the latest images and joint state).</description>
  <maintainer email="rohanmeagher@gmail.com">Rohan Meagher</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>sensor_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
