<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vla_arm_control</name>
  <version>0.1.0</version>
  <description>VLA-to-robot-arm control pipeline for Isaac Sim. Implements temporal-ensemble smoothing over action chunks produced by Vision-Language-Action models (PI-0.5, OpenVLA-OFT).</description>
  <maintainer email="rohanmeagher@gmail.com">Rohan Meagher</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
